--- a/index.html
+++ b/index.html
@@ -99,27 +99,9 @@
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="section__list list">
-            <li class="section__item">
-              <img
-                src="./images/neondesktop.jpg"
-                alt="Неоновий робочий стіл"
-                width="370"
-              />
-            </li>
-            <li class="section__item">
-              <img
-                src="./images/phonedesktop.jpg"
-                alt="Телефон та ноутбук"
-                width="370"
-              />
-            </li>
-            <li class="section__item">
-              <img
-                src="./images/rgbdesktop.jpg"
-                alt="Палітра кольорів на планшеті"
-                width="370"
-              />
-            </li>
+            <li class="section__item"></li>
+            <li class="section__item"></li>
+            <li class="section__item"></li>
           </ul>
         </div>
       </section>
