added social icons in footer and team cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -182,6 +182,55 @@
     </main>
     <footer class="footer">
       <div class="container">
+        <div class="container__logo-address">
+          <div class="logo">
+            <a class="logo__text" href="./index.html">
+              Web<span class="logo__footer-studio">Studio</span>
+            </a>
+          </div>
+          <address class="address">
+            <ul class="address__list list">
+              <li class="address__item">
+                <a
+                  class="address__text map"
+                  target="_blank"
+                  href="https://goo.gl/maps/3csEusUE26N4QP277"
+                  >м.Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="address__item">
+                <a class="address__text" href="mailto:info@devstudio.com">
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="address__item">
+                <a class="address__text" href="tel:+380961111111">
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social">
+          <h2 class="social__title">Приєднуйтесь</h2>
+          <ul class="social__list list">
+            <li class="social__item" alt="Instagram">
+              <a class="social__link" href="./"></a>
+            </li>
+            <li class="social__item" alt="Twitter">
+              <a class="social__link" href="./"></a>
+            </li>
+            <li class="social__item" alt="Facebook">
+              <a class="social__link" href="./"></a>
+            </li>
+            <li class="social__item" alt="LinkedIn">
+              <a class="social__link" href="./"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+      <div class="container">
         <div class="logo">
           <a class="logo__text" href="./index.html">
             Web<span class="logo__footer-studio">Studio</span>
