--- a/index.html
+++ b/index.html
@@ -113,16 +113,58 @@
               <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" />
               <h2 class="team__name">Ігор Дем'яненко</h2>
               <p class="team__text">Product Designer</p>
+              <ul class="team__social-list list">
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+              </ul>
             </li>
             <li class="team__card">
               <img src="./images/olga.jpg" alt="Ольга Рєпіна" width="270" />
               <h2 class="team__name">Ольга Рєпіна</h2>
               <p class="team__text">Frontend Developer</p>
+              <ul class="team__social-list list">
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+              </ul>
             </li>
             <li class="team__card">
               <img src="./images/mykola.jpg" alt="Микола Тарасов" width="270" />
               <h2 class="team__name">Микола Тарасов</h2>
               <p class="team__text">Marketing</p>
+              <ul class="team__social-list list">
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+              </ul>
             </li>
             <li class="team__card">
               <img
@@ -132,6 +174,20 @@
               />
               <h2 class="team__name">Михайло Єрмаков</h2>
               <p class="team__text">UI Designer</p>
+              <ul class="team__social-list list">
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+                <li class="team__item">
+                  <a class="team__social-link" href="./"></a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -139,33 +195,52 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="logo">
-          <a class="logo__text" href="./index.html">
-            Web<span class="logo__footer-studio">Studio</span>
-          </a>
+        <div class="container__logo-address">
+          <div class="logo">
+            <a class="logo__text" href="./index.html">
+              Web<span class="logo__footer-studio">Studio</span>
+            </a>
+          </div>
+          <address class="address">
+            <ul class="address__list list">
+              <li class="address__item">
+                <a
+                  class="address__text map"
+                  target="_blank"
+                  href="https://goo.gl/maps/3csEusUE26N4QP277"
+                  >м.Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="address__item">
+                <a class="address__text" href="mailto:info@devstudio.com">
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="address__item">
+                <a class="address__text" href="tel:+380961111111">
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+          </address>
         </div>
-        <address class="address">
-          <ul class="address__list list">
-            <li class="address__item">
-              <a
-                class="address__text map"
-                target="_blank"
-                href="https://goo.gl/maps/3csEusUE26N4QP277"
-                >м.Київ, пр-т Лесі Українки, 26
-              </a>
+        <div class="social">
+          <h2 class="social__title">Приєднуйтесь</h2>
+          <ul class="social__list list">
+            <li class="social__item" alt="Instagram">
+              <a class="social__link" href="./"></a>
             </li>
-            <li class="address__item">
-              <a class="address__text" href="mailto:info@devstudio.com">
-                info@devstudio.com
-              </a>
+            <li class="social__item" alt="Twitter">
+              <a class="social__link" href="./"></a>
             </li>
-            <li class="address__item">
-              <a class="address__text" href="tel:+380961111111">
-                +38 096 111 11 11
-              </a>
+            <li class="social__item" alt="Facebook">
+              <a class="social__link" href="./"></a>
+            </li>
+            <li class="social__item" alt="LinkedIn">
+              <a class="social__link" href="./"></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
