svg changes, add new section and icons

--- a/index.html
+++ b/index.html
@@ -42,14 +42,20 @@
         <div class="con">
           <ul class="con__list list">
             <li class="con__item">
-              <a class="con__link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              <a class="con__link" href="mailto:info@devstudio.com">
+                <svg class="con__icon" width="16" height="12">
+                  <use href="./images/sprite.svg#email"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li class="con__item">
               <a class="con__link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+                ><svg class="con__icon" width="10" height="16">
+                  <use href="./images/sprite.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </div>
@@ -66,6 +72,11 @@
         <div class="container">
           <ul class="benefits__list list">
             <li class="benefits__item">
+              <div class="icon">
+                <svg class="icon__item" width="70" height="70">
+                  <use href="./images/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <h2 class="benefits__title">Увага до деталей</h2>
               <p class="benefits__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -73,6 +84,11 @@
               </p>
             </li>
             <li class="benefits__item">
+              <div class="icon">
+                <svg class="icon__item" width="70" height="70">
+                  <use href="./images/sprite.svg#clock"></use>
+                </svg>
+              </div>
               <h2 class="benefits__title">Пунктуальність</h2>
               <p class="benefits__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -80,12 +96,22 @@
               </p>
             </li>
             <li class="benefits__item">
+              <div class="icon">
+                <svg class="icon__item" width="70" height="70">
+                  <use href="./images/sprite.svg#diagram"></use>
+                </svg>
+              </div>
               <h2 class="benefits__title">Планування</h2>
               <p class="benefits__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="benefits__item">
+              <div class="icon">
+                <svg class="icon__item" width="70" height="70">
+                  <use href="./images/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
               <h2 class="benefits__title">Сучасні технології</h2>
               <p class="benefits__text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -115,16 +141,32 @@
               <p class="team__text">Product Designer</p>
               <ul class="team__social-list list">
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -134,16 +176,32 @@
               <p class="team__text">Frontend Developer</p>
               <ul class="team__social-list list">
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -153,16 +211,32 @@
               <p class="team__text">Marketing</p>
               <ul class="team__social-list list">
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -176,18 +250,83 @@
               <p class="team__text">UI Designer</p>
               <ul class="team__social-list list">
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="team__item">
-                  <a class="team__social-link" href="./"></a>
+                  <a class="team__social-link" href="./">
+                    <svg class="team__social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="client">
+        <div class="container">
+          <h2 class="client__title">Постійній клієнти</h2>
+          <ul class="client__list list">
+            <li class="client__item">
+              <a href="./" class="client__link">
+                <svg class="client__icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client__item">
+              <a href="./" class="client__link">
+                <svg class="client__icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client__item">
+              <a href="./" class="client__link">
+                <svg class="client__icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client__item">
+              <a href="./" class="client__link">
+                <svg class="client__icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client__item">
+              <a href="./" class="client__link">
+                <svg class="client__icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client__item">
+              <a href="./" class="client__link">
+                <svg class="client__icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -227,17 +366,33 @@
         <div class="social">
           <h2 class="social__title">Приєднуйтесь</h2>
           <ul class="social__list list">
-            <li class="social__item" alt="Instagram">
-              <a class="social__link" href="./"></a>
+            <li class="social__item" aria-label="Instagram">
+              <a class="social__link" target="_blank" href="./">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social__item" alt="Twitter">
-              <a class="social__link" href="./"></a>
+            <li class="social__item" aria-label="Twitter">
+              <a class="social__link" target="_blank" href="./">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social__item" alt="Facebook">
-              <a class="social__link" href="./"></a>
+            <li class="social__item" aria-label="Facebook">
+              <a class="social__link" target="_blank" href="./">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social__item" alt="LinkedIn">
-              <a class="social__link" href="./"></a>
+            <li class="social__item" aria-label="LinkedIn">
+              <a class="social__link" target="_blank" href="./">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
