--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,10 @@
         <nav class="nav">
           <ul class="nav__list list">
             <li class="nav__item">
-              <a class="nav__link" href="./">Студія</a>
+              <a class="nav__link nav__link_current" href="./">Студія</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link nav__link_current" href="./portfolio.html"
-                >Портфоліо</a
-              >
+              <a class="nav__link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="nav__item">
               <a class="nav__link" href="./">Контакти</a>
@@ -44,12 +42,20 @@
         <div class="con">
           <ul class="con__list list">
             <li class="con__item">
-              <a class="con__link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              <a class="con__link" href="mailto:info@devstudio.com">
+                <svg class="con__icon" width="16" height="12">
+                  <use href="./images/sprite.svg#email"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li class="con__item">
-              <a class="con__link" href="tel:961111111">+38 096 111 11 11</a>
+              <a class="con__link" href="tel:+380961111111"
+                ><svg class="con__icon" width="10" height="16">
+                  <use href="./images/sprite.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </div>
@@ -214,50 +220,36 @@
         <div class="social">
           <h2 class="social__title">Приєднуйтесь</h2>
           <ul class="social__list list">
-            <li class="social__item" alt="Instagram">
-              <a class="social__link" href="./"></a>
-            </li>
-            <li class="social__item" alt="Twitter">
-              <a class="social__link" href="./"></a>
-            </li>
-            <li class="social__item" alt="Facebook">
-              <a class="social__link" href="./"></a>
-            </li>
-            <li class="social__item" alt="LinkedIn">
-              <a class="social__link" href="./"></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-      <div class="container">
-        <div class="logo">
-          <a class="logo__text" href="./index.html">
-            Web<span class="logo__footer-studio">Studio</span>
-          </a>
-        </div>
-        <address class="address">
-          <ul class="address__list list">
-            <li class="address__item">
-              <a
-                class="address__text map"
-                target="_blank"
-                href="https://goo.gl/maps/3csEusUE26N4QP277"
-                >м.Київ, пр-т Лесі Українки, 26
+            <li class="social__item" aria-label="Instagram">
+              <a class="social__link" target="_blank" href="./">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="address__item">
-              <a class="address__text" href="mailto:info@devstudio.com">
-                info@devstudio.com
+            <li class="social__item" aria-label="Twitter">
+              <a class="social__link" target="_blank" href="./">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
               </a>
             </li>
-            <li class="address__item">
-              <a class="address__text" href="tel:961111111">
-                +38 096 111 11 11
+            <li class="social__item" aria-label="Facebook">
+              <a class="social__link" target="_blank" href="./">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item" aria-label="LinkedIn">
+              <a class="social__link" target="_blank" href="./">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
               </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
