fixed grammar errors

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       </section>
       <section class="client">
         <div class="container">
-          <h2 class="client__title">Постійній клієнти</h2>
+          <h2 class="client__title">Постійні клієнти</h2>
           <ul class="client__list list">
             <li class="client__item">
               <a href="./" class="client__link">
