fixed nav portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,12 @@
         <nav class="nav">
           <ul class="nav__list list">
             <li class="nav__item">
-              <a class="nav__link nav__link_current" href="./">Студія</a>
+              <a class="nav__link" href="./">Студія</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="./portfolio.html">Портфоліо</a>
+              <a class="nav__link nav__link_current" href="./portfolio.html"
+                >Портфоліо</a
+              >
             </li>
             <li class="nav__item">
               <a class="nav__link" href="./">Контакти</a>
